--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "REST",
+  "name": "BookStore",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple book store",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ellywynn",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.12"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "pg": "^8.6.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.6.5"
   }
 }
