--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BookStore",
+  "name": "bookstore",
   "version": "1.0.0",
   "description": "Simple book store",
   "main": "server.js",
